# audio_widner

./: .gitignore  CMakeLists.txt  README.md  stereo_plugin.jucer
CMake/: FINDIPP.cmake
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Processing/: DataAccumulator.cpp  DataAccumulator.h  MainProcessor.cpp  MainProcessor.h  NoiseGenerator.h  ProcessingParams.cpp  ProcessingParams.h  ProcessingRendering.cpp  ProcessingRendering.h  SyncedArray.cpp  SyncedArray.h
Source/UI/: SpectrumCanvas.cpp  SpectrumCanvas.h
